<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="2"
            android:contentDescription="@string/movieimage"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtMovieName"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="5"
            android:paddingTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/the_battle"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toRightOf="@+id/imgMovie"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgForward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="3dp"
            android:contentDescription="@string/forwardimage"
            android:src="@drawable/ic_play_arrow_black_24dp"
            app:layout_constraintLeft_toRightOf="@+id/txtMovieName" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/_28_12_2014" />

        <TextView
            android:id="@+id/txtAdultStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/u_a" />

    </RelativeLayout>
</LinearLayout>